# crypto-bot-rs

./: .env.example  .gitignore  Cargo.toml  Makefile  README.md  docker-compose.yml  setup.sh
.github/instructions/: initial_prompt.instructions.md
docs/: DEVELOPMENT.md  README.md
migration/: Cargo.toml
migration/src/: lib.rs  m20240101_000001_create_wallets_table.rs  m20240102_000001_create_transactions_table.rs  m20240103_000001_create_address_book_table.rs  m20240104_000001_create_scheduled_transactions_table.rs  m20240105_000001_create_price_alerts_table.rs  m20240105_000002_create_security_settings_table.rs  m20240106_000001_create_swaps_table.rs  m20240107_000001_create_token_metadata_table.rs
src/: alert_checker.rs  config.rs  enums.rs  error.rs  lib.rs  main.rs  scheduler.rs
src/api/: balance.rs  mod.rs  transaction.rs  transfer.rs  wallet.rs
src/bot/: callbacks.rs  commands.rs  constants.rs  handlers.rs  keyboards.rs  mod.rs  swap_handlers.txt  utils.rs
src/chains/: mod.rs
src/chains/bitcoin/: provider.rs  wallet.rs
src/chains/cardano/: provider.rs  wallet.rs
src/chains/evm/: mod.rs  provider.rs  tokens.rs  wallet.rs
src/chains/solana/: mod.rs  provider.rs  tokens.rs  wallet.rs
src/chains/xrp/: provider.rs  wallet.rs
src/crypto/: encryption.rs  mod.rs
src/db/: mod.rs  token_metadata_repository.rs  transaction_repository.rs
src/db/entity/: address_book.rs  mod.rs  price_alert.rs  scheduled_transaction.rs  security_settings.rs  swap.rs  token_metadata.rs  transaction.rs  wallet.rs  withdrawal_tracking.rs
src/dex/: jupiter.rs  mod.rs  uniswap.rs
src/providers/: chain_provider.rs  mod.rs
src/rpc/: manager.rs  mod.rs
src/services/: address_book_service.rs  balance_service.rs  gas_estimation_service.rs  mod.rs  portfolio_service.rs  price_alert_service.rs  price_service.rs  scheduling_service.rs  security_service.rs  swap_service.rs  token_discovery_service.rs  transaction_service.rs  transfer_service.rs  wallet_service.rs
tools/migrate/: go.mod  main.go
