[package]
name = "crypto-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8.7", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.7", features = ["cors", "trace"] }

# Database
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-migration = "1.1"

# Blockchain - EVM
ethers = "2.0"

# Blockchain - Solana  
solana-client = "3.1.3"
solana-sdk = "3.0.0"
ed25519-dalek-bip32 = "0.3.0"
spl-token = "4.0"
spl-associated-token-account = "3.0"
async-trait = "0.1"

# Cryptography
bip39 = { version = "2.0", features = ["rand"] }
aes-gcm = "0.10"
rand = "0.9.2"
hex = "0.4"
bs58 = "0.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Configuration
dotenv = "0.15"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Utilities
uuid = { version = "1.18.1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.4"
migration = { path = "migration" }

[dev-dependencies]
testcontainers = "0.25.2"
testcontainers-modules = { version = "0.13.0", features = ["postgres"] }
