[package]
name = "crypto-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.8.8", features = ["macros"] }
tokio = { version = "1.48", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.8", features = ["cors", "trace"] }

# Telegram Bot
teloxide = { version = "0.17", features = ["macros"] }
reqwest = { version = "0.12", features = ["json"] }
qrcode = "0.14.1"
image = "0.25.9"

# Database
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
sea-orm-migration = "1.1"

# Blockchain - EVM
ethers = "2.0.14"
async-trait = "0.1"

# Blockchain - Solana
solana-sdk = "3.0"
solana-client = "3.1"
solana-keypair = { version = "3.1", features = ["seed-derivable"] }
solana-commitment-config = "3.1"
solana-system-interface = { version = "3.0", features = ["bincode"] }
spl-token = "9.0"
spl-associated-token-account = "8.0"

# Cryptography
bip39 = { version = "2.2", features = ["rand"] }
aes-gcm = "0.10"
rand = "0.9.2"
hex = "0.4"
bs58 = "0.5"
hmac = "0.12"
sha2 = "0.10"
argon2 = "0.5"
ed25519-dalek = "2.1"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.148"

# Configuration
dotenv = "0.15"

# Error handling
thiserror = "2.0.17"
anyhow = "1.0.100"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }

# Utilities
uuid = { version = "1.19", features = ["v4", "serde"] }
chrono = { version = "0.4.42", features = ["serde"] }
lazy_static = "1.5"
migration = { path = "migration" }

[dev-dependencies]
